# kimi-bot

./: Cargo.toml  README.md
.github/: changelog-builder.json  labeler.yaml
.github/workflows/: labeler.yaml  lint_test.yml  release.yml
src/: main.rs
